--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,22 @@
 * {
-    font-family: 'Righteous', cursive;
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    font-family: 'Righteous', cursive;
+    display: none;
+}
+
+.d-none {
+    display:none;
+}
+
+body {
+    background-color: #E5E5E5;
+}
+
 nav {
+    top: 0;
     position: fixed;
     display: flex;
     align-items: center;
@@ -13,10 +26,90 @@ nav {
     height: 92px;
 }
 
+nav div {
+    margin-left: 25px;
+}
 nav > div h1 {
     font-size: 44px ;
 }
 
 nav div p {
+    margin-left: 20px;
+    margin-bottom: 20px;
     font-size: 18px;
 }
+
+h1 {
+    margin-left: 20px;
+    margin-top: 20px;
+    font-size: 28px;
+}
+
+.container {
+    margin-top: 132px;
+    margin-bottom: 122px;
+}
+
+.items {
+    margin-top: 20px;
+    margin-left: 20px;
+    gap: 15px;
+    display: flex;
+    overflow-x: auto;
+}
+
+
+.item {
+    background-color: #ffff;
+    width: 162px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 15px 10px ;
+    border-radius: 9px;
+}
+
+.item h3 {
+    font-size: 16px;
+    margin: 6px 0;
+}
+
+.item > p {
+    font-size: 15px;
+    color: #A6A6A6;
+}
+
+.item div {
+    margin-top: 6px;
+    display: flex;
+}
+
+
+footer {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 92px;
+}
+#checkout-button { 
+    border: none;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50px;
+        background: #CBCBCB;
+        width: 87vw;
+        height: 62px;
+}   
+
+#checkout-button p {
+    font-size: 20px;
+    color: #FFFFFF;
+    width: 50%;
+}
+
