--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,79 @@ footer {
     width: 50%;
 }
 
+.modal-background{
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.modal{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #50D074;
+    width: 377px;
+    height: 353px;
+    border-radius: 9px;
+    color: #ffff;
+}
+
+.modal h1 {
+    margin: 20px 0 20px 0;
+    font-size: 22px;
+}
+
+.modal-container {
+    width: 290px;
+}
+
+.modal-container div {
+    margin-bottom: 10px;
+}
+.modal-container >div > p {
+    font-size: 22px;
+}
+
+.modal button {
+    background-color: #50D074;
+    width: 300px;
+    margin-bottom: 20px;
+    border: unset;
+    font-size: 22px;
+}
+
+#confirm-button {
+    color: #50D074;
+    background-color: #ffff;
+    height: 52px;
+    border-radius: 60px;
+}
+
+@media (max-width: 288px)  {    
+    
+    
+    .modal, .modal-container {
+        width: 100%;
+    }
+
+    .modal-container >div > p {
+        font-size: 18px;
+    }
+
+    nav > div h1{
+        font-size: 33px;
+    }
+
+    #checkout-button p  {
+        font-size: 15px;
+    }
+
+}
+
+
+
