--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,13 @@
     box-sizing: border-box;
 }
 
-::-webkit-scrollbar {
-    display: none;
-}
 
 .d-none {
     display:none;
 }
 
 body {
-    font-family: 'Righteous', cursive;
+    font-family: "Roboto", sans-serif;
     background-color: #E5E5E5;
 }
 
@@ -37,7 +34,6 @@ nav > div h1 {
 }
 
 nav div p {
-    font-family: 'Righteous', cursive;
     margin-left: 20px;
     margin-bottom: 20px;
     font-size: 18px;
@@ -50,8 +46,11 @@ h1 {
     font-size: 28px;
 }
 
+h3 {
+    font-weight: 700;
+}
+
 .container {
-    font-family: 'Righteous', cursive;
     margin-top: 132px;
     margin-bottom: 122px;
 }
@@ -61,7 +60,7 @@ h1 {
     margin-left: 20px;
     gap: 20px;
     display: flex;
-    overflow-x: auto;
+    overflow-x: scroll;
 }
 
 
@@ -152,13 +151,16 @@ footer {
 }
 
 .modal-container div {
-    margin-bottom: 10px;
-}
-.modal-container >div > p {
     font-size: 22px;
+    margin-bottom: 10px;
 }
 
 .modal button {
+ 
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #50D074;
     width: 300px;
     margin-bottom: 20px;
@@ -171,6 +173,15 @@ footer {
     background-color: #ffff;
     height: 52px;
     border-radius: 60px;
+}
+.modal button  p {
+    margin: auto;
+}
+
+@media (max-width: 935px) {
+    ::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 @media (max-width: 288px)  {    
