--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
     border-radius: 100%; 
     position: absolute;
      width: 20px; 
-     left: 120px
+     left: 120px;
+     bottom: 10px;
 }
 .d-none {
     display:none;
